// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Resource Video Jwplayer 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 203,
      },
    ]
  }
  testID="video-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-preview-video"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={70}
          bbWidth={70}
          color={4294967295}
          focusable={false}
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 70,
                "width": 70,
              },
            ]
          }
          tintColor={4294967295}
          vbHeight={24}
          vbWidth={24}
          width={70}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource Video OmniPlayer 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      Object {
        "height": 203,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowsInlineMediaPlayback={true}
      cacheEnabled={true}
      injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
      injectedJavaScriptForMainFrameOnly={true}
      javaScriptEnabled={true}
      messagingEnabled={false}
      onContentProcessDidTerminate={[Function]}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      source={
        Object {
          "uri": "https://mms.myomni.live/5e6126fdbe444d66709afab1",
        }
      }
      startInLoadingState={true}
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
          },
        ]
      }
      testID="video-omniplayer-webview-video"
      useSharedProcessPool={true}
      useWebKit={true}
    />
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ],
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://www.cerema.fr/sites/default/files/styles/uas_normal/public/media/images/2017/11/mountain-village-2657307_1920.jpg?h=d6fbcf4a&itok=JMWt0SsS",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="video-omniplayer-webview-preview-container"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="video-omniplayer-webview-preview-video"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 36,
                "justifyContent": "center",
                "transform": Array [
                  Object {
                    "scaleX": 0.5,
                  },
                  Object {
                    "scaleY": 0.5,
                  },
                  Object {
                    "rotateZ": "0deg",
                  },
                ],
                "width": 36,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#F73F52",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "45deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#3EC483",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "135deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#FFE100",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "225deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#00B0FF",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "315deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource Video Youtube 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 203,
      },
    ]
  }
  testID="video-youtube-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-youtube-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-youtube-preview-video"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={70}
          bbWidth={70}
          color={4294967295}
          focusable={false}
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 70,
                "width": 70,
              },
            ]
          }
          tintColor={4294967295}
          vbHeight={24}
          vbWidth={24}
          width={70}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
